--- a/Google_Drive_Capstone_Project_Exploratory_Data_Analysis.ipynb
+++ b/Google_Drive_Capstone_Project_Exploratory_Data_Analysis.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/rishabhshukla061995/EDA-FedEx-Logistics-Performance-Analysis/blob/main/Google_Drive_Capstone_Project_Exploratory_Data_Analysis.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/rishabhshukla061995/Projects/blob/main/Google_Drive_Capstone_Project_Exploratory_Data_Analysis.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -67,7 +67,7 @@
         "id": "jynIjyNGnzKy"
       },
       "source": [
-        "#### Github Link: https://github.com/rishabhshukla061995/EDA-FedEx-Logistics-Performance-Analysis"
+        "#### Github Link: https://github.com/rishabhshukla061995/Projects/blob/main/Google_Drive_Capstone_Project_Exploratory_Data_Analysis.ipynb"
       ]
     },
     {
@@ -4944,7 +4944,7 @@
       ],
       "provenance": [],
       "mount_file_id": "1hU45ggESpgEzjkE4h_g_-qA-N6f9FDKl",
-      "authorship_tag": "ABX9TyM82Mscfnw6/F6+20KZ+o8b",
+      "authorship_tag": "ABX9TyNWUEqXU27bkYDqKnvkhOkl",
       "include_colab_link": true
     },
     "kernelspec": {
